--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,15 +14,26 @@ include_directories(include)
 set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Disable benchmark tests")
 add_subdirectory(external/benchmark)
 
+# Logger library
+add_library(logger src/logger.cpp)
+target_link_libraries(logger pthread)
+
 # Test executables
 add_executable(ring_buffer_test tests/ring_buffer_test.cpp)
+
 add_executable(ring_buffer_mt_test tests/ring_buffer_mt_test.cpp)
 target_link_libraries(ring_buffer_mt_test pthread)
 
-# Benchmark executable
+add_executable(logger_test tests/logger_test.cpp)
+target_link_libraries(logger_test logger)
+
+# Benchmark executables
 add_executable(ring_buffer_benchmark benchmarks/ring_buffer_benchmark.cpp)
 target_link_libraries(ring_buffer_benchmark benchmark::benchmark pthread)
+
 add_executable(ring_buffer_benchmark_realistic benchmarks/ring_buffer_benchmark_realistic.cpp)
 target_link_libraries(ring_buffer_benchmark_realistic benchmark::benchmark pthread)
+
 add_executable(ring_buffer_latency benchmarks/ring_buffer_latency.cpp)
 target_link_libraries(ring_buffer_latency pthread)
+
